# pointnet.pytorch

./: README.md
pointnet/: data.py  model.py
utils/: CMakeLists.txt  render_balls_so.cpp  show3d_balls.py  train_classification.py  train_segmentation.py
